# vulkan-abstraction

./: .gitignore  .gitmodules  README.md  todo.md
assets/shader/: test-3.vert  test.frag
engine/: CMakeLists.txt
engine/core/: core.cpp  core.hpp  log.cpp  log.hpp  types.hpp  window.cpp  window.hpp
engine/gfx/: apis.hpp  buffer.cpp  buffer.hpp  commandbuffer.cpp  commandbuffer.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  renderpass.cpp  renderpass.hpp  swapchain.cpp  swapchain.hpp  syncobjects.cpp  syncobjects.hpp  texture.hpp
engine/gfx/opengl/: opengl_context.cpp  opengl_context.hpp  opengl_window.cpp  opengl_window.hpp
engine/gfx/vulkan/: vulkan_context.cpp  vulkan_context.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_window.cpp  vulkan_window.hpp
engine/renderer/: renderer.cpp  renderer.hpp
projects/: CMakeLists.txt
projects/test/: main.cpp
projects/test-2/: CMakeLists.txt  main.cpp
projects/test-3/: CMakeLists.txt  main.cpp
projects/test_design/: CMakeLists.txt  main.cpp
